--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-time-machine  
+title: Public Policy Formulation and Implementation      
+google_analytics: UA-128751837-2  
