--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine  
+theme: jekyll-theme-cayman  
 title: Public Policy Formulation and Implementation      
 google_analytics: UA-128751837-2  
