--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman  
-title: Public Policy Formulation and Implementation      
+title: Public Policy Formulation and Implementation   
+description: [Course Website]  
 google_analytics: UA-128751837-2  
