--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman  
 title: Public Policy Formulation and Implementation   
-description: [Course Website]  
+description: Vietnam Japan University 2019    
 google_analytics: UA-128751837-2  
