--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman  
 title: Public Policy Formulation and Implementation   
-description: <font color="">Vietnam Japan University 2019</font>   
+description: <font color="BROWN">Vietnam Japan University 2019</font>   
 google_analytics: UA-128751837-2  
