--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman  
-title: Public Policy    
+title: Public Policy Analysis      
 description: <font color="YELLOW">Course Website</font>   
 google_analytics: UA-128751837-2  
